# chronicle

./: .cirrus.yml  .gitignore  .gitmodules  .orig.cirrus.yml.orig  .travis.yml  .win.cirrus.yml.win  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENCE  LICENCE.md  LICENSE  Makefile  Makefile.am  Makefile.am.orig  README  README.md  RtAudio.h  autogen.sh  build_script.sh  chronicle-1.0.0-windows.tar.gz.REMOVED.git-id  chronicle-maybe.tar.gz.REMOVED.git-id  chronicle.VC.VC.opendb  chronicle.VC.db.REMOVED.git-id  chronicle.cpp  chronicle.h  chronicle.sln  chronicle.vcxproj  chronicle.vcxproj.filters  cirrus.yml  conanfile.txt  configure  configure.ac  dist-script-win32.sh  dist-script-win64.sh  dist_script.sh  parse_opts.cpp  parse_opts.h  screen.cpp  screen.h  (+2 more)
.ci/: Dockerfile  Dockerfile.linux  Dockerfile.winx64  Dockerfile.winx86  Dockerfile.x64  Dockerfile.x86  chronicle-b2-upload.sh  chronicle-create-bb-upload.sh  chronicle-create-dist-archives.sh  list_full_deps.py  mingw32.cmake
.ci/linux/: apt-deps.sh  boost-download.sh  boost-install.sh  chronicle-build.sh  chronicle-create-bb-upload.sh  chronicle-create-dist-archives.sh  dist-script.sh  dist.sh  lame-download.sh  lame-install.sh  rtaudio-download.sh  rtaudio-install.sh
.ci/mingw-64/: apt-script.sh  apt-script.sh.orig  boost-download-script.sh  boost-install-script.sh  boost-install-script.sh.orig  chronicle-build.sh  chronicle-build.sh.orig  chronicle-create-bb-upload.sh  chronicle-create-dist-archives.sh  dist.sh  dist.sh.orig  full-build.sh  lame-download-script.sh  lame-install-script.sh  lame-install-script.sh.orig  libflac-download.sh  libflac-install.sh  libflac-install.sh.orig  libogg-download.sh  libogg-install.sh  libogg-install.sh.orig  libsndfile-download-script.sh  libsndfile-install-script.sh  libsndfile-install-script.sh.orig  libspeex-download.sh  libspeex-install.sh  libspeex-install.sh.orig  libvorbis-download.sh  libvorbis-install.sh  libvorbis-install.sh.orig  list_full_deps.py  ncurses-download-script.sh  ncurses-install-script.sh  ncurses-install-script.sh.orig  rtaudio-download-script.sh  rtaudio-install-script.sh  rtaudio-install-script.sh.orig
.ci/mingw32/: chronicle-build.sh  mingw32.cmake
.ci/mingw32-32/: apt-script.sh  boost-download-script.sh  boost-install-script.sh  chronicle-build.sh  chronicle-create-dist-archives.sh  lame-install-script.sh  libflac-install.sh  libogg-install.sh  libsndfile-download-script.sh  libsndfile-install-script.sh  libspeex-install.sh  libvorbis-install.sh  list_full_deps.py  ncurses-install-script.sh  rtaudio-install-script.sh  win32_toolchain.cmake
.ci/mingw32-64/: apt-script.sh  chronicle-build.sh  chronicle-create-dist-archives.sh  lame-download-script.sh  lame-install-script.sh  libsndfile-install-script.sh  libspeex-download.sh  libvorbis-install.sh  list_full_deps.py  rtaudio-install-script.sh  win64_toolchain.cmake
.github/: FUNDING.yml
Debug/: .NETFramework,Version=v4.0.AssemblyAttributes.asm  chronicle.vcxprojResolveAssemblyReference.cache
Debug/chronicle.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  chronicle.lastbuildstate
include/spdlog/: tweakme.h
