AC_INIT([chronicle], [1.0.0], [calmcl1@aol.com])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_CONFIG_SRCDIR([chronicle.h])
AC_CONFIG_HEADERS([config.h])
AC_LANG(C++)
AC_PROG_CPP
AC_PROG_CXX
LT_INIT
BOOST_REQUIRE([1.65.0])
BOOST_FILESYSTEM(mt)
BOOST_SYSTEM

AC_CHECK_HEADERS([cstring])
PKG_CHECK_MODULES(RTAUDIO, rtaudio)
PKG_CHECK_MODULES(SNDFILE, sndfile)
PKG_CHECK_MODULES(NCURSES, ncurses)

AC_CONFIG_FILES(Makefile)
AC_OUTPUT()